# NWSS-CNC

./: README.md
nwss-cnc/: CMakeLists.txt
nwss-cnc/src/core/: tool.cpp
